fixed bug with session0

--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0\n"
+      "b'9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0'\n"
      ]
     }
    ],
@@ -314,10 +314,9 @@
     "b = unhexlify(h)\n",
     "# reverse ([::-1])\n",
     "b_rev = b[::-1]\n",
-    "# convert to hex (hexlify)",
-    "h_rev = hexlify(b_rev)\n",
+    "# convert to hex (hexlify)h_rev = hexlify(b_rev)\n",
     "\n",
-    "print(helper.bytes_to_str(h_rev))"
+    "print(hexlify(b_rev))"
    ]
   }
  ],
