--- a/session0.ipynb
+++ b/session0.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print('hello world')"
    ]
@@ -36,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10946\n"
+     ]
+    }
+   ],
    "source": [
     "def fib(n):\n",
     "    if n in (0,1):\n",
@@ -46,7 +62,7 @@
     "    else:\n",
     "        return fib(n-1) + fib(n-2)\n",
     "\n",
-    "print(fib(10))"
+    "print(fib(20))"
    ]
   },
   {
@@ -67,9 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'hello world'\n",
     "b = b'hello world'\n",
@@ -101,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -182,9 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "dlrow olleh\n",
+      "b'dlrow olleh'\n",
+      "38\n",
+      "b'&'\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a[::-1]) # [5, 4, 3, 2, 1]\n",
@@ -210,9 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'68656c6c6f20776f726c64'\n",
+      "b'hello world'\n"
+     ]
+    }
+   ],
    "source": [
     "from binascii import hexlify, unhexlify\n",
     "\n",
@@ -233,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0'\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -244,8 +311,12 @@
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
     "# convert to binary (unhexlify)\n",
+    "b = unhexlify(h)\n",
     "# reverse ([::-1])\n",
-    "# convert to hex (hexlify)"
+    "b_rev = b[::-1]\n",
+    "# convert to hex (hexlify)\n",
+    "h_rev = hexlify(b_rev)\n",
+    "print(h_rev)"
    ]
   },
   {
@@ -273,9 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "39 % 12"
    ]
@@ -297,13 +379,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
-    "prime = 19"
+    "prime = 19\n",
+    "print(99 % prime)\n",
+    "print(456*444 % prime)\n",
+    "print(9**77 % prime)"
    ]
   }
  ],
