--- a/session1.ipynb
+++ b/session1.ipynb
@@ -80,12 +80,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.021s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.011s\n",
       "\n",
       "OK\n"
      ]
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 25, 50, 75, 100, 125, 150, 175, 200, 225, 250, 275, 300, 325, 350, 375, 400, 425, 450, 475, 500, 525, 550, 575, 600, 625, 650, 675, 700, 725, 750]\n"
+      "[0, 26, 52, 78, 104, 130, 156, 182, 208, 234, 260, 286, 312, 338, 364, 390, 416, 442, 468, 494, 520, 546, 572, 598, 624, 650, 676, 702, 728, 754, 780]\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.029s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -313,7 +313,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -368,7 +368,10 @@
     "# (-2,4), (3,7), (18,77)\n",
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
     "\n",
-    "for x, y in ((-2,4), (3,7), (18,77)):\n",
+    "points = ((-2,4), (3,7), (18,77))\n",
+    "\n",
+    "for x, y in points:\n",
+    "    # determine whether (x,y) is on the curve\n",
     "    if y**2 == x**3 + 5*x + 7:\n",
     "        print('({},{}) is on the curve'.format(x,y))\n",
     "    else:\n",
@@ -386,7 +389,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -422,7 +425,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.017s\n",
       "\n",
       "OK\n"
      ]
@@ -489,7 +492,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.008s\n",
       "\n",
       "OK\n"
      ]
@@ -557,7 +560,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
