--- a/session6.ipynb
+++ b/session6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.1\n",
     "\n",
@@ -55,9 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -84,9 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'15hZo812Lx266Dot6T52krxpnhrNiaqHya'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -97,16 +132,32 @@
     "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
     "\n",
     "# unhexlify to get binary\n",
+    "script_pubkey = unhexlify(hex_script_pubkey)\n",
     "# parse with Script\n",
+    "s = Script.parse(script_pubkey)\n",
     "# get the 3rd element, which should be the hash160\n",
-    "# convert h160 to p2pkh address"
+    "h160 = s.elements[2]\n",
+    "# convert h160 to p2pkh address\n",
+    "h160_to_p2pkh_address(h160)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.2\n",
     "\n",
@@ -135,9 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'2375044d646ad73594dd0b37b113becdb03964584c9e7e000000000000000000'\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -147,17 +206,42 @@
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
     "# unhexlify to get the binary\n",
+    "bin_block = unhexlify(hex_block)\n",
     "# double_sha256 the result\n",
-    "# hexlify to see what it looks like"
+    "result = double_sha256(bin_block)\n",
+    "# hexlify to see what it looks like\n",
+    "print(hexlify(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.004s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.2\n",
     "\n",
@@ -169,9 +253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIP9: True\n",
+      "BIP91: False\n",
+      "BIP141: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Version Signaling Example\n",
     "\n",
@@ -213,9 +307,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.009s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.005s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -227,9 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x13ce9000000000000000000000000000000000000000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculating Target from Bits Example\n",
     "\n",
@@ -244,9 +368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "888171856257\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculating Difficulty from Target Example\n",
     "\n",
@@ -285,9 +417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "000000000000000x1788f2000000000000000000000000000000000000000000\n",
+      "46717549644.70642\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.1\n",
     "\n",
@@ -296,22 +437,45 @@
     "hex_bits = 'f2881718'\n",
     "\n",
     "# unhexlify to get the bits\n",
+    "bits = unhexlify(hex_bits)\n",
     "# last byte is exponent\n",
+    "exponent = bits[-1]\n",
     "# first three bytes are the coefficient. use: int.from_bytes(x, 'little')\n",
+    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "target = coefficient * 2**(8*(exponent-3))\n",
     "# print target using print('0x{:x}'.format(target).zfill(64))\n",
+    "print('0x{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
     "# do the same for the min_bits for min target\n",
+    "min_bits = unhexlify(hex_min_bits)\n",
+    "min_exponent = min_bits[-1]\n",
+    "min_coefficient = int.from_bytes(min_bits[:-1], 'little')\n",
+    "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
     "\n",
-    "# difficulty is min target / target"
+    "# difficulty is min target / target\n",
+    "difficulty = min_target / target\n",
+    "print(difficulty)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -338,9 +502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 7.1\n",
     "\n",
@@ -352,19 +527,38 @@
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
     "# unhexlify to get the binary block\n",
+    "bin_block = unhexlify(hex_block)\n",
     "# double_sha256 the block\n",
+    "sha = double_sha256(bin_block)\n",
     "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
+    "proof = int.from_bytes(sha, 'little')\n",
     "# make a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
+    "b = Block.parse(stream)\n",
     "# get the target\n",
-    "# check proof of work < target"
+    "target = b.target()\n",
+    "# check proof of work < target\n",
+    "proof < target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.2\n",
     "\n",
